[package]
name = "template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
axum = "0.7.7"
tower-http = {version = "0.6.1", features = ["full"]}
tokio = { version = "1.39.0", features = ["full"] }
